CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.November.21 (0.9.15)
  * Update BeOS Makefile.
    Marcin 'Shard' Konicki <shard at beosjournal.org>

  * Added BeOS resource file (src/tuxpaint.rsrc)
    Marcin 'Shard' Konicki <shard at beosjournal.org>

  * Removed TODO.txt file and moved all bugs
    and feature requests to the SourceForge
    tracker: http://sourceforge.net/tracker/?group_id=66938

  * Updated Norwegian Bokmal translation.
    Klaus Ade Johnstad <klaus@skolelinux.no>

  * Galician translation created.
    Leandro Regueiro <unho@gulo.org>

  * Chinese (Traditional) documentation updates.
    Song Huang <Song@ossacc.org>

  * Added "PKG_ROOT" variable to Makefile, and "tuxpaint.spec" file,
    for Tux Paint RPM building ease.
    TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

  * Added larger screen size support: 1024x768, 1280x1024, 1400x1050, 1600x1200
    TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

  * Fixed to compile on old GLIBC system (such as RedHat-6.2)
    TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>


2004.September.28 (0.9.14)
  * New Features:
    -------------
    * Added support for immutable "starter" images, which are installed
      globally with Tux Paint, and provide a starting canvas for images.

      A PNG file with alpha is continuously drawn over whatever changes are
      made to the current drawing.  For example, a black outline of a cartoon
      character could be made, to simulate a coloring book.
      (See 'jetplane.png')

      A second PNG file can be supplied which will be drawn on the normal
      part of the canvas (where a new picture would normally be all-white),
      allowing for simulated depth.  Drawing and magic tools all mutilate the
      background, as it's part of the normal canvas.  However, when editing